--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -5,7 +5,10 @@
     <title th:text="${title}"></title>
 </head>
 <body>
+    <div th:if="${param.error!=null}" th:text="${param.error}"></div>
+    <div th:if="${param.success!=null}" th:text="${param.success}"></div>
     <h1 th:text="${title}"></h1>
+    <a th:href="@{/form}">create +</a>
     <table>
         <thead>
         <tr>
@@ -13,6 +16,8 @@
             <th>name</th>
             <th>price</th>
             <th>date</th>
+            <th>edit</th>
+            <th>delete</th>
         </tr>
         </thead>
         <tbody>
@@ -21,6 +26,8 @@
             <td th:text="${product.name}"></td>
             <td th:text="${product.price}"></td>
             <td th:text="${product.createAt}"></td>
+            <td><a th:href="@{/form/}+${product.id}">edit</a></td>
+            <td><a th:href="@{/delete/}+${product.id}"onclick="return confirm('Are you sure you want to delete?');">delete</a></td>
         </tr>
         </tbody>
     </table>
